argocd/apps/04_keycloak_instance/02_create_keycloak_ocp_route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak-admin-route
spec:
  host: keycloak-rhbk.apps.sno1.local.momolab.io
  port:
    targetPort: https
  tls:
    termination: passthrough 
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: keycloak-instance-service
