argocd/apps/04_keycloak_instance/03_create_keycloak_lb_route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak-hostname-route
spec:
  host: keycloak.local.momolab.io
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: keycloak-instance-service
